Wed Dec  3 16:14:51 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* Many changes to prepare for implementation of fast comparison
		  schemes: Here are only a few:
	- added file polys-impl.h which implements low-level poly stuff 
	- removed file polys2.cc, added polys-impl.cc 
	- added Singularp target to Make
	- prepared configure for setting of exponent type
	- got rid of as many direct p->exp[..] accesses as possible
	- added file spSpolyLoop.cc spSpolyLoop.h polys-comp.h
	* polys-impl.h: if you defined COMP_FAST, then fast polynomial
		  comparsions are eanbled (still needs a lot of debugging)
	

Fri Oct 31 05:45:25 1997  Olaf Bachman  <bachman@bombelli.dm.unipi.it>

	* polys1.cc et al: got rid of p[Get/Set]ExpV routines, provided
		  pCopy2 instead

Wed Oct  8 12:22:47 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* increased version number to 1.1.3

	* ndbm.cc: Solaris compatibility: #define bcopy bzero, bcmp;
		  #include <fcntl.h> 
	* configure.in: added check for fcntl.h sys/types.h sys/stat.h, ucblib
	  ensured that either lgmp or lsmallgmp is in $LIBS

Tue Sep 16 15:45:44 MET DST 1997
        * hannes: changed/corrected/clean naNormalize, naLcm, pCleardenom, pContent
            (polys1.cc, longalg.cc)
            added singclap_alglcm (clapconv.cc, clapsing.cc)

Tue Sep  9 11:05:28 MET DST 1997
        * hannes: flex-staff is now in febase.inc
               changed tutorial (doc/examples.doc, version-no: doc/tutor.tex)

Fri Aug 15 11:44:13 MESZ 1997  Kai Krueger <krueger@mathematik.uni-kl.de>
	* ndbm.cc: fix open-bug  for dos
	  default mode of open is ascii, we need binary mode.

Thu Aug 14 18:04:04 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
	and anne

	* Makefile.in, mod2.h.in, configure.in: cleaned up for dos
	  cross-compilation 

Tue Aug 12 19:08:20 MET DST 1997
        * hannes: added nExactDiv to numbers
        * hannes: corrected open bug in sing_dbm.cc (could only "r")