@@ -1,3 +1,8 @@
+Thu Dec  4 16:13:31 MEZ 1997 Kai Krueger <krueger@mathematik.uni-kl.de>
+	* ndbm.cc: don't replace bcopy by memcpy if possible, otherwise
+	  the database (>1024 bytes) will be corrupted.
+	- added check for bcopy() in configure.
+	
 Wed Dec  3 16:14:51 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
 
 	* Many changes to prepare for implementation of fast comparison
